Kubernetes/mosquitto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
spec:
  selector:
    app: mosquitto
  ports:
  - protocol: TCP
    port: 1883
    targetPort: 1883
  - protocol: TCP
    port: 9001
    targetport: 9001
  type: ClusterIP
