Kubernetes/mosquitto/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mosquitto
spec:
  podSelector:
    matchLabels:
      app: mosquitto
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: node-red
